# automakebase

./: Makefile.am  configure.ac  exsample.pc.in
include/: exsample.hpp
lib/: Makefile.am  libexsample-c.c  libexsample.cpp  libsample.cpp
src/: Makefile.am  exsample-c.c  exsample.cpp
